2009-06-04  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.SourceEditor/AutoSave.cs: Fixed "Bug 504605 -
	  Crash after removing a project".

2009-06-02  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.SourceEditor/SourceEditorView.cs: When setting
	  the mime type for the file, try to find one for which there
	  is a syntax mode.

2009-05-25  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.SourceEditor/EditActions.cs: Fixed Bug 506245 -
	  Block indent doesn't work.

2009-05-25  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.SourceEditor/SourceEditorWidget.cs:
	* MonoDevelop.SourceEditor/SearchAndReplaceWidget.cs: fixed
	  'Bug 506246 - Search command doesn't copy the selected
	  string if find widget is visible'.

2009-05-20  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.SourceEditor\SourceEditorView.cs: Use FilePath
	  for representing paths.

2009-05-19  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.SourceEditor\SourceEditorView.cs: Use the new
	  FilePath class for handling file and directory paths.

2009-05-14  Mike Krüger  <mkrueger@novell.com>

	* Makefile.am:
	* MonoDevelop.SourceEditor.csproj:
	* MonoDevelop.SourceEditor/SourceEditorOptions.cs:
	* MonoDevelop.SourceEditor/HighlightPropertiesSemanticRule.cs:
	  Moved highlight properties semantic rule to c# backend.

2009-05-11  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.SourceEditor/SourceEditorView.cs: Fixed "Bug
	  502586 - Edit / Format / Join Lines does not join blank
	  lines".

2009-05-11  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.SourceEditor/EditActions.cs: Fixed "Bug 501996 -
	  Tab interpreted as reindent sometimes also inserts tabs".

2009-05-11  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.SourceEditor/SearchAndReplaceWidget.cs: Fixed
	  "Bug 501993 - Find and replace: Pressing Tab never gets to
	  Replace field".

2009-05-08  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.SourceEditor/SourceEditorView.cs: